docs-archive/apache-airflow-providers-git/1.0.0/_sources/_api/airflow/providers/git/hooks/git/index.rst.txt
airflow.providers.git.hooks.git
===============================

.. py:module:: airflow.providers.git.hooks.git


Attributes
----------

.. autoapisummary::

   airflow.providers.git.hooks.git.log


Classes
-------

.. autoapisummary::

   airflow.providers.git.hooks.git.GitHook


Module Contents
---------------

.. py:data:: log

.. py:class:: GitHook(git_conn_id = 'git_default', repo_url = None, *args, **kwargs)

   Bases: :py:obj:`airflow.providers.common.compat.sdk.BaseHook`


   Hook for git repositories.

   :param git_conn_id: Connection ID for SSH connection to the repository
   :param repo_url: Explicit Git repository URL to override the connection's host.

   Connection extra fields:

   * ``key_file`` — path to an SSH private key file.
   * ``private_key`` — inline SSH private key string (mutually exclusive with ``key_file``).
   * ``private_key_passphrase`` — passphrase for the private key (key_file or inline).
   * ``strict_host_key_checking`` — one of ``"yes"``, ``"no"``, ``"accept-new"``, ``"off"``
     or ``"ask"`` (default ``"accept-new"``).
   * ``known_hosts_file`` — path to a custom SSH known-hosts file.
   * ``ssh_config_file`` — path to a custom SSH config file.
   * ``host_proxy_cmd`` — SSH ProxyCommand string (e.g. for bastion/jump hosts).
   * ``ssh_port`` — non-default SSH port.
   * ``github_app_id`` — GitHub App ID used for GitHub App authentication. Requires the GitHub App
     private key to be provided as a PEM-encoded key via either ``private_key`` (inline) or
     ``key_file`` (path to key file).
   * ``github_installation_id`` — GitHub App installation ID used for GitHub App authentication.

   Token authentication over http(s) configures a credential helper through ``GIT_CONFIG_COUNT``
   and needs git version 2.31 or higher.


   .. py:attribute:: conn_name_attr
      :value: 'git_conn_id'



   .. py:attribute:: default_conn_name
      :value: 'git_default'



   .. py:attribute:: conn_type
      :value: 'git'



   .. py:attribute:: hook_name
      :value: 'GIT'



   .. py:method:: get_ui_field_behaviour()
      :classmethod:



   .. py:attribute:: repo_url


   .. py:attribute:: user_name


   .. py:attribute:: auth_token


   .. py:attribute:: private_key


   .. py:attribute:: key_file


   .. py:attribute:: private_key_passphrase


   .. py:attribute:: strict_host_key_checking


   .. py:attribute:: known_hosts_file


   .. py:attribute:: ssh_config_file


   .. py:attribute:: host_proxy_cmd


   .. py:attribute:: ssh_port
      :type:  int | None


   .. py:attribute:: github_app_id


   .. py:attribute:: github_installation_id


   .. py:attribute:: github_app_token_exp
      :type:  datetime.datetime | None
      :value: None



   .. py:attribute:: env
      :type:  dict[str, str]


   .. py:method:: set_git_env(key = None)


   .. py:method:: configure_hook_env()


